src/test/deca/context/invalid/renduFinal/21method_call_more_params_expected.deca
// Description:
//      MethodCall : incompatibilité au niveau de la signature de la méthode
//      => Les paramètres passés à la fonction lors de son appel doivent correspondre à sa signature
//
// Resultats:
//      Erreur contextuelle
//      Ligne 19 : La méthode plus prend en entrée 1 paramètre au lieu de 0 paramètre

class A {
    int x;
    int plus(int y){
        y=x+y;
        return y;
    }
}

{
    A a = new A();
    println("z=", a.plus());
}
